--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+
+spring.datasource.url= jdbc:mysql://localhost:3306/naresh?useSSL=true
+spring.datasource.username= root
+spring.datasource.password= 204408204
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
